--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:client:dev": "nodemon client/src/index.js",
     "start:db": "node server/index.js",
     "start:db:dev": "nodemon server/index.js",
-    "db:seed": "node scripts/seed.js",
+    "db:seed": "node script/seed.js",
     "start": "npm run start:db && npm run start:client"
   },
   "keywords": [],
