--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^6.3.1",
+    "eslint": "^8.17.0",
+    "eslint-plugin-react": "^7.30.0",
     "nodemon": "^2.0.16"
   }
 }
